tests/toy/neg/001194_mutation.toylang
program a = { program a = { } . if a then sleep; } .
